# mule-rs

./: Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: release.yml  test.yaml
datasets/: sales-10-weird-bad.csv  sales-10-weird.csv  sales-10.csv  sales-100.csv  sales-100.tsv
examples/: 00-defaults.rs  01-custom-options.rs  02-custom-typer.rs  03-infer-schema.rs  defaults.rs
src/: column_parsing.rs  column_type.rs  column_types.rs  dataset.rs  dataset_batch.rs  dataset_file.rs  default_typer.rs  defaults.rs  errors.rs  file.rs  header_parsing.rs  lexer.rs  lib.rs  line_parsing.rs  record_parsing.rs  schema.rs  schema_inference.rs  separator_inference.rs  typer.rs  typing_helpers.rs  value_parsing.rs  values.rs
src/lexer/: mod.rs  records.rs
src/parser/: file_parser.rs  line_parser.rs  mod.rs
src/raw_parser/: file_parser.rs  line_parser.rs  mod.rs  value.rs  value_parser.rs
src/reader/: mod.rs
src/standard_column_types/: float_type.rs  mod.rs  real_type.rs  text_type.rs
tests/: file_parsing.rs  reading_datasets.rs  schema_inference.rs
