[package]
name = "mule"
description = "Strong-headed (yet flexible) CSV/TSV dataset parser"
version = "0.0.1-alpha.0"
authors = ["Amr Hassan <amr.hassan@gmail.com>"]
edition = "2018"
repository = "https://github.com/amrhassan/mule-rs"
license = "MIT"

[dependencies]
tokio = { version = "1.4.0", features = ["fs", "io-util", "rt-multi-thread", "macros"] }
thiserror = "1"
derive_more = "0"
itertools = "0.10"
maplit = "1.0.2"
