[package]
name = "mule"
description = "Strong-headed (yet flexible) parser of columnar datasets from CSV, TSV and other delimiter-separated datasets"
version = "0.4.1-alpha.0"
authors = ["Amr Hassan <amr.hassan@gmail.com>"]
edition = "2018"
repository = "https://github.com/amrhassan/mule-rs"
license = "MIT"
categories = ["parsing", "parser-implementations", "asynchronous"]
keywords = ["csv", "tsv", "dataset", "columnar"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
tokio = { version = "1.4.0", features = ["fs", "io-util", "rt-multi-thread", "macros"] }

[dependencies]
tokio = { version = "1.4.0", features = ["fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
futures-core = "0.3"
thiserror = "1"
derive_more = "0"
itertools = "0.10"
maplit = "1"
rayon = "1.5.0"
